# credit-decision-engine

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Christiaan.ipynb  Design Choices.md  LICENSE  README.md  SECURITY.md  Tasks.md  cart_scorer.py  cart_scoring.py  categorical-model.json  churn_dx_report.md  churn_pipeline_dx.py  dtree_speedtests.ipynb  engagement_scoring.py  example_config.json  example_config2.json  fraud_pipeline.py  hr_performance_pipeline.py  inventory_reorder_pipeline.py  lead_scoring_pipeline.py  loan_scoring_pipeline.py  model_file_name.json  package-lock.json  package.json  patient_risk_pipeline.py  pyproject.toml  setup.py  test_config.ipynb  test_configmodel.py  test_configmodel_simple.py  test_configmodule.py  test_content_engagement.py  test_credit_modules.py  test_ecommerce_scoring.py  test_join_module.py  test_mapping.py  test_new_architecture.py  (+5 more)
.github/workflows/: pr.yml  release.yml
decider/: __init__.py  _ext.py  exceptions.py  executor.py  graphutil.py  initialization.py  pipeline.py  serializable.py  settings.py  types.py  typing.py
decider/cli/: __init__.py  _graph.py  _visualise_app.py  serve.py  template.py  visualise.py
decider/config/: __init__.py  _ext.py  _ext.pyi  base.py  core.py  file.py  versioned.py
decider/dag/: builder.py  compile.py  core.py  expression.py  inject.py  lazy_execution.py  lazyframe.py  subdag.py
decider/magics/: __init__.py
decider/modules/: __init__.py  _ext.py  _ext.pyi  core.py  expression.py  functional.py  util.py
decider/serializable/: dataframe.py  (+3 more)
decider/templates/static/extension_package/: module.py  pyproject.toml
diagrams/: design_idea.drawio  inputs.drawio  module_overrides.drawio  pandas_polars.drawio  test.drawio
docker/: Dockerfile  ui.Dockerfile
docs/: api.rst  conf.py  index.rst  main.md  robots.txt
dsp-re-ui/: README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.paths.json
dsp_re_backend/: asgi.py  websocket.ts
example/: main.py  tree.ipynb  tree_data.json
github-sync/: README.md
ped/: __init__.py  _ext.py  exceptions.py  flow.py  initialization.py  settings.py
requirements/: webapp.txt
scratchpad/: chaining_modules.ipynb  configmodel.ipynb
spockflow/: _serializable.py  nodes.py
testing/: 01-materialisation.ipynb  02-adapter.ipynb  decision_table_demo.ipynb  flow_config_test.ipynb  getting_started.ipynb  map.ipynb  mixed_type_test.ipynb  parameter_resolving.ipynb  result.json  scorecard_demo.ipynb  streamable_pandas_demo.ipynb  string_match_benchmark.ipynb  test.ipynb  test.parquet  tree_test.ipynb
tests/: conftest.py  test_client_rule_activation.py  test_config_roundtrip.py  test_credit_modules.py  test_expression_module.py  test_graph_module_registry.py  test_loan_scoring_ui_app.py  test_rule_loader.py  test_rule_workflow.py  test_sequential_and_join.py  test_workflow_nav.py
(+333 files in other folders)
