[project]
name = "decider"
version = "0.1.0"
description = "Build, serve and inspect decision pipelines"
requires-python = ">=3.10"
dependencies = [
    "polars",
    "pydantic>=2",
    "pydantic-settings",
    "click",
]

[project.optional-dependencies]
serve-starlette = ["uvicorn", "starlette"]
serve-sanic     = ["sanic"]
visualise       = ["streamlit", "graphviz"]
notebook        = ["ipython"]
all             = [
    "uvicorn", "starlette",
    "sanic",
    "streamlit", "graphviz",
    "ipython",
]

[project.scripts]
decider = "decider.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["decider"]
