[project]
name = "$package_name"
version = "0.1.0"
description = "Decider extension package"
requires-python = ">=3.10"
dependencies = [
    "polars",
    "pydantic",
]

[project.optional-dependencies]
dev = ["decider"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/$package_name"]
